added dynamic favicon and refactored FileUploader control in WarehouseZone Imported from Changeset 2971

--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -657,6 +657,7 @@ footer p {
     z-index: 999;
 }
 
+.dvfiles,
 #dvfiles {
     font-size: small;
     color: green;
@@ -665,6 +666,10 @@ footer p {
     padding-left: 10px;
     display: none;
     padding-top: 5px;
+}
+
+.dvfiles-vidible {
+    display: block;
 }
 
 #dvfilesHover {
