--- a/WMS/Views/Theme/Default/TenantWebsites/EditLayoutSettings.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/EditLayoutSettings.cshtml
@@ -17,29 +17,7 @@
 @{
     ViewBag.Title = "Newsletter Subscription Settings";
 }
-<script type="text/javascript">
-    function onFileUploadComplete(s, e) {
-        if (e.callbackData) {
-            $("#dvfiles").show();
-            var fileData = e.callbackData.split('|');
-            var Fileobj = { FileName: fileData };
-            var result = $("#uploaderTenantDept").tmpl(Fileobj);
-            $("#dvfiles").append(result);
-            $('.se-pre-con').hide();
-            $("#FileLength").val('True');
 
-        }
-
-
-    }
-    function onFileUploadStart(s, e) {
-        if ($("#FileLength").val() == 'True') {
-            e.cancel = true;
-            alert("Only one file allow to be select");
-            return;
-        }
-    }
-</script>
 <h2><span>@ViewBag.Title (@ViewBag.SiteName)</span></h2>
 @Html.Hidden("tenantWebsite", true)
 @using (Html.BeginForm())
@@ -88,29 +66,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.SubscriptionPanelImageUrl, new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.Partial("_Uploader")
-                    @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
-                    <br />
-                    <div id="dvfiles">
-                        <strong>Uploaded Files</strong>
-                        @foreach (var file in ViewBag.Files)
-                        {
-
-                            <table>
-                                <tr>
-                                    <td id="tdProductfileName">@file</td>
-                                    <td>
-                                        <p>&nbsp;</p>
-                                    </td>
-                                    <td><a class="LRemove" onclick="_RemoveLogoFile('@file')">Remove</a></td>
-                                    <td>
-                                        <p>&nbsp;</p>
-                                    </td>
-
-                                </tr>
-                            </table>
-                        }
-                    </div>
+                    @Html.Action("_FileUploader", new { name = "SubscriptionPanelImage", filePath = Model.SubscriptionPanelImageUrl })
                 </div>
             </div>
         </div>
@@ -122,12 +78,4 @@
         </div>
     </div>
 }
-<script id="uploaderTenantDept" type="text/x-jquery-tmpl">
-    <tr>
-        <td id="tdfileName">${FileName}</td>
-        <td><p>&nbsp;</p></td>
-        <td><a class="LRemove" onclick="_RemoveLogoFile('${FileName}')">Remove</a></td>
-
-    </tr>
-</script>
 
