--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     @Styles.Render("~/Content/Theme/University/app/css/university")
     @Styles.Render("~/fonts/custom-fonts")
     <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.min.css">
-    <link rel="icon" href="~/Content/Theme/University/app/images/favico.ico" />
+    <link rel="icon" href="@ViewBag.Favicon" />
     <link href="~/Content/Theme/University/app/css/owl.carousel.min.css" rel="stylesheet" />
     <link href="~/Content/Theme/University/app/css/jquery-confirm.min.css" rel="stylesheet" />
 
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    
+
     <script>
         function startLoading() {
             $("#divLoading").show();
@@ -75,7 +75,7 @@
     }
 
 
-  
+
 
 
 
