CE2-T178 - Added post code check to eCommerce pages Imported from Changeset 2972

--- a/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
@@ -14,7 +14,7 @@
                 <div class="form-group">
                     <div class="findAddrWrap">
                         <input type="text" id="postCode" name="search" class="findAddrInput text-search-postcode" placeholder="Enter Postcode" />
-                        <button class="fadBtn" onclick="SearchPostCode();">Search</button>
+                        <button class="fadBtn" type="button" onclick="SearchPostCode();">Search</button>
                     </div>
                 </div>
             </div>
