--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CollectionPointSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CollectionPointSelector.cshtml
@@ -5,7 +5,7 @@
             <div class="form-group">
                 <div class="findAddrWrap">
                     <input type="text" id="collection-point-post-code__input" class="findAddrInput text-target-postcode" placeholder="Enter Postcode"/>
-                    <button class="fadBtn" onclick="findNearCollectionPoints();">SEARCH</button>
+                    <button class="fadBtn" type="button" onclick="findNearCollectionPoints();">SEARCH</button>
                 </div>
             </div>
         </div>
