--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
@@ -7,7 +7,7 @@
                 <h6 class="pb-1">Please Put The Destination PostCode To Ckeck</h6>
                 <div class="findAddrWrap">
                     <input type="text" id="shipping-address-post-code__input" class="findAddrInput shipping-target-postCode" placeholder="Enter Postcode" />
-                    <button class="fadBtn" onclick="selectPostCode();">CHECK</button>
+                    <button class="fadBtn" type="button" onclick="getDeliveryAvailabilityStatus();">CHECK</button>
                 </div>
             </div>
         </div>
@@ -66,6 +66,32 @@
         if (!!onShippingAddressSelected && typeof onShippingAddressSelected === "function") {
             onShippingAddressSelected(id, postCode)
         }
+    }
+
+
+    function getDeliveryAvailabilityStatus() {
+        var postCode = $(".shipping-target-postCode").val();
+
+        $.ajax({
+            url: basePath + '/Orders/GetDeliveryAvailabilityStatus',
+            method: 'post',
+            data: { postCode: postCode },
+            dataType: 'json',
+            success: function (data) {
+                if (data == "InvalidPostCode") {
+                    $.dialog({
+                        title: '',
+                        content: 'Invalid postcode'
+                    });
+                }
+                else {
+                    selectPostCode();
+                }
+            },
+            error: function (err) {
+                alert(err);
+            }
+        });
     }
 
     function selectPostCode() {
