--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1476,13 +1476,47 @@ input[type=number]::-webkit-outer-spin-button {
         display: none
     }
 
-.nb_top_catSection .accordion ul li {
+    .nb_top_catSection .accordion ul li {
     width: 25%;
-    margin: 15px
-}
+    margin: 15px;
+    overflow: hidden;
+    }
+@media(min-width: 1199px) {
+    .nb_top_catSection .accordion ul li div {
+        transform: skew(12deg) translateX(-15%);
+        width: 135%;
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: cover;
+    }
 
-.res_navWrapper.show {
-    transform: translateX(0)
+        .nb_top_catSection .accordion ul li div a {
+            transform: skew(-12deg);
+        }
+
+    .nb_top_catSection .accordion ul li:nth-child(1) div {
+        transform: skew(0deg);
+        width: 100%;
+    }
+
+        .nb_top_catSection .accordion ul li:nth-child(1) div a {
+            transform: skew(0deg);
+        }
+
+    
+
+    .nb_top_catSection .accordion ul li:last-child div {
+        transform: skew(0deg);
+        width: 100%;
+    }
+
+      .nb_top_catSection .accordion ul li:last-child div a {
+            transform: skew(0deg);
+        }
+
+    .res_navWrapper.show {
+        transform: translateX(0)
+    }
 }
 
 .res_navWrapper {
