--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
@@ -17,8 +17,8 @@
                     @foreach (var item in Model)
                     {
                         var imagePath = !string.IsNullOrEmpty(item.Image) ? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif";
-                        <li style="background-image: url('@imagePath')">
-                            <div>
+                        <li>
+                            <div style="background-image: url('@imagePath')">
                                 @if (item.Type == Ganedata.Core.Entities.Enums.WebsiteNavigationType.Category)
                                 {
                                     <a href="@Url.Action("list", "Products", new {category = item.Name})">
